// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: loaded 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="marketplace"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="marketplace.page"
  />
  <Header
    currentEdition="developer"
  />
  <EditionBoxes
    currentEdition="developer"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      marketplace.page.plugins
    </h1>
    <div
      className="page-description"
    >
      <p>
        marketplace.page.plugins.description
      </p>
      <Alert
        className="spacer-top"
        variant="info"
      >
        <FormattedMessage
          defaultMessage="marketplace.page.plugins.description2"
          id="marketplace.page.plugins.description2"
          values={
            {
              "link": <withAppStateContext(DocLink)
                to="/instance-administration/marketplace/"
              >
                marketplace.page.plugins.description2.link
              </withAppStateContext(DocLink)>,
            }
          }
        />
      </Alert>
    </div>
  </header>
  <PluginRiskConsentBox
    acknowledgeRisk={[Function]}
    currentEdition="developer"
  />
  <Search
    query={
      {
        "filter": "all",
        "search": "",
      }
    }
    updateCenterActive={false}
    updateQuery={[Function]}
  />
  <DeferredSpinner
    loading={false}
  >
    <PluginsList
      pending={
        {
          "installing": [],
          "removing": [],
          "updating": [],
        }
      }
      plugins={
        [
          {
            "key": "sonar-foo",
            "name": "Sonar Foo",
          },
        ]
      }
      readOnly={true}
      refreshPending={[MockFunction]}
    />
    <Footer
      total={1}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="marketplace"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="marketplace.page"
  />
  <Header
    currentEdition="developer"
  />
  <EditionBoxes
    currentEdition="developer"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      marketplace.page.plugins
    </h1>
    <div
      className="page-description"
    >
      <p>
        marketplace.page.plugins.description
      </p>
      <Alert
        className="spacer-top"
        variant="info"
      >
        <FormattedMessage
          defaultMessage="marketplace.page.plugins.description2"
          id="marketplace.page.plugins.description2"
          values={
            {
              "link": <withAppStateContext(DocLink)
                to="/instance-administration/marketplace/"
              >
                marketplace.page.plugins.description2.link
              </withAppStateContext(DocLink)>,
            }
          }
        />
      </Alert>
    </div>
  </header>
  <PluginRiskConsentBox
    acknowledgeRisk={[Function]}
    currentEdition="developer"
  />
  <Search
    query={
      {
        "filter": "all",
        "search": "",
      }
    }
    updateCenterActive={false}
    updateQuery={[Function]}
  />
  <DeferredSpinner
    loading={true}
  >
    marketplace.plugin_list.no_plugins.all
  </DeferredSpinner>
</div>
`;

exports[`should render correctly: not readonly 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="marketplace"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="marketplace.page"
  />
  <Header
    currentEdition="community"
  />
  <EditionBoxes
    currentEdition="community"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      marketplace.page.plugins
    </h1>
    <div
      className="page-description"
    >
      <p>
        marketplace.page.plugins.description
      </p>
    </div>
  </header>
  <PluginRiskConsentBox
    acknowledgeRisk={[Function]}
    currentEdition="community"
    riskConsent="ACCEPTED"
  />
  <Search
    query={
      {
        "filter": "all",
        "search": "",
      }
    }
    updateCenterActive={false}
    updateQuery={[Function]}
  />
  <DeferredSpinner
    loading={false}
  >
    <PluginsList
      pending={
        {
          "installing": [],
          "removing": [],
          "updating": [],
        }
      }
      plugins={
        [
          {
            "key": "sonar-foo",
            "name": "Sonar Foo",
          },
        ]
      }
      readOnly={false}
      refreshPending={[MockFunction]}
    />
    <Footer
      total={1}
    />
  </DeferredSpinner>
</div>
`;
